<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ConfirmAdoptionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

<!--        <androidx.cardview.widget.CardView-->
<!--            android:id="@+id/cvConfirmAdoptionPetImage"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="250dp"-->
<!--            app:cardCornerRadius="10dp">-->

<!--            <ImageView-->
<!--                android:id="@+id/ivConfirmAdoptionPetImage"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="250dp"-->
<!--                android:layout_centerVertical="true"-->
<!--                android:layout_marginTop="260dp"-->
<!--                tools:src="@drawable/ic_launcher_background" />-->
<!--        </androidx.cardview.widget.CardView>-->

        <androidx.cardview.widget.CardView
            android:id="@+id/cvConfirmAdoptionPetImage"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivConfirmAdoptionPetImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:src="@drawable/ic_launcher_background" />
        </androidx.cardview.widget.CardView>




        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="12dp">


            <TextView
                android:id="@+id/tvConfirmAdoptionPetName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvConfirmAdoptionPetBreed"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/breed"/>

                <TextView
                    android:id="@+id/tvConfirmAdoptionPetAge"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/age"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tvConfirmAdoptionPetDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="30dp"
                android:text="@string/description" />

            <TextView
                android:id="@+id/tvConfirmAdoptionStaticAdopterDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adopter_details"
                android:textAlignment="center"
                android:textSize="18dp"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvConfirmAdoptionPetDescription" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvConfirmAdoptionStaticAdopterName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tvConfirmAdoptionAdopterName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvConfirmAdoptionStaticAdopterMobileNumber"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/mobile_number" />


                <TextView
                    android:id="@+id/tvConfirmAdoptionAdopterMobileNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/mobile_number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvConfirmAdoptionStaticAdopterAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/address" />


                <TextView
                    android:id="@+id/tvConfirmAdoptionAdopterAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:text="@string/address" />
            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnConfirmAdopterApprove"
                android:backgroundTint="#55A630"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/approve" />

            <Button
                android:id="@+id/btnConfirmAdoptionDeny"
                android:backgroundTint="#D00000"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:text="@string/reject" />
        </LinearLayout>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>